<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
        >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnEnviarCadastro"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_nome"
                    android:id="@+id/textViewNome"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextNome"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/textViewEndereco"
                    android:layout_alignParentTop="false"
                    android:layout_toRightOf="@+id/textViewEndereco"
                    android:layout_alignBaseline="@+id/textViewNome"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_endereco"
                    android:id="@+id/textViewEndereco"
                    android:layout_below="@+id/textViewNome"
                    android:layout_alignParentStart="true"
                    android:paddingTop="25dp"
                    />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextEndereco"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/textViewEndereco"
                    android:layout_alignBaseline="@+id/textViewEndereco"
                    android:layout_toRightOf="@+id/textViewEndereco"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_uf"
                    android:id="@+id/textViewUF"
                    android:layout_below="@+id/textViewEndereco"
                    android:layout_alignParentStart="true"
                    android:paddingTop="25dp"
                    />

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerUF"
                    android:layout_toRightOf="@+id/textViewEndereco"
                    android:layout_alignBaseline="@+id/textViewUF"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_email"
                    android:id="@+id/textViewEmail"
                    android:layout_below="@+id/textViewUF"
                    android:layout_alignParentStart="true"
                    android:paddingTop="25dp"
                    />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/editTextEmail"
                    android:layout_below="@+id/editTextEndereco"
                    android:layout_alignParentEnd="true"
                    android:layout_alignStart="@+id/editTextEndereco"
                    android:layout_toRightOf="@+id/textViewEndereco"
                    android:layout_alignBaseline="@+id/textViewEmail"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_telefone"
                    android:id="@+id/textViewTelefone"
                    android:layout_below="@+id/textViewEmail"
                    android:layout_alignParentStart="true"
                    android:paddingTop="25dp"
                    />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editTextTelefone"
                    android:layout_below="@+id/editTextEmail"
                    android:layout_alignParentEnd="true"
                    android:layout_alignStart="@+id/editTextEmail"
                    android:layout_alignBaseline="@+id/textViewTelefone"
                    android:layout_toRightOf="@+id/textViewEndereco"
                    />

        </RelativeLayout>

    </ScrollView>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar"
            android:id="@+id/btnEnviarCadastro"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

</RelativeLayout>